--- a/css/custom.css
+++ b/css/custom.css
@@ -22,19 +22,31 @@
 
 
 
+
+.navbar-custom {
+    background: #ffffff;
+}
+
+
 /*section-1 start
 =============================*/
 
 .section-1 {
     margin-top: 4em;
-    background: orangered;
+    background: rgba(6,66,173, 0.7);
+    /*position: relative;*/
+    /*background-size: cover;*/
+    color: #ffffff;
     padding: 6em;
 }
+
+
 
 .display-5 {
     color: #ffffff;
 
 }
+
 
 /*section-2 start
 ===========================*/
@@ -46,20 +58,11 @@
 }
 
 .fiber__image {
-    /height: 200px;
     background-color: #ddd;
-    /*margin-bottom: 20px;*/
-    /*background-position: center;*/
-    /*background-size: cover;*/
     box-shadow: 0 10px 40px #e3e3e3;
-    /*margin-bottom: 35px;*/
 
 }
 
-.fiber__image img {
-    /*border-radius: 5px;*/
-
-}
 
 .fiber__title {
     color: #423030;
@@ -71,6 +74,21 @@
     text-align: justify;
 }
 
+.bar::before {
+
+}
+.bar::before {
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border: 2px solid #16a4d6;
+    z-index: 2;
+    border-width: 2px 0 0 2px;
+    top: -15px;
+    left: -22px;
+}
+
 
 
 /*section-3 start
@@ -78,8 +96,19 @@
 */
 
 .section-3 {
-    background: #f9fafa;
-    padding: 2em 0 5em;
+    background: #333333;
+    color: #a4a4a4;
+    padding: 3em 0;
+    margin: 1em 0;
+}
+
+.optical__title {
+    color: #ffffff;
+    font-size: 1.5em;
+}
+
+.more {
+    margin: 0.8em 0;
 }
 
 
@@ -89,38 +118,42 @@
 
 .section-4 {
     /*background: #f9fafa;*/
-    padding: 4em 0;
-    background: #90e290;
-    position: relative;
+    padding: 3em 0;
+    /*background: #90e290;*/
+    /*position: relative;*/
 }
-.section-4::before {
-    content: '';
-    position: absolute;
-    top: 0; right: 0;
-    border-top: 60px solid #f9fafa;
-    border-left: 60px solid #90e290;
-    width: 0;
-}
+/*.section-4::before {*/
+    /*content: '';*/
+    /*position: absolute;*/
+    /*top: 0; right: 0;*/
+    /*border-top: 60px solid #f9fafa;*/
+    /*border-left: 60px solid #90e290;*/
+    /*width: 0;*/
+/*}*/
 
-.section-4::after {
-    content: '';
-    position: absolute;
-    bottom: 0; left: 0;
-    border-bottom: 60px solid #ffffff;
-    border-right: 60px solid #90e290;
-    width: 0;
-}
+/*.section-4::after {*/
+    /*content: '';*/
+    /*position: absolute;*/
+    /*bottom: 0; left: 0;*/
+    /*border-bottom: 60px solid #ffffff;*/
+    /*border-right: 60px solid #90e290;*/
+    /*width: 0;*/
+/*}*/
 
-.section-4 .fiber__title {
-    color: #ffffff;
-}
+
 
 
 /*section-5 start
 ==============================*/
 .section-5 {
-    padding: 2em;
-    margin: 2em 0;
+    padding: 2em 0;
+    margin: 1em 0;
+    background: #333333;
+    color: #ffffff;
+}
+
+.hardware__title {
+    font-size: 1.5em;
 }
 
 /*.section-5:hover {*/
@@ -133,34 +166,54 @@
 /*section-6 start
 ==============================*/
 .section-6 {
-    padding: 4em;
-    background: mediumpurple;
-    margin: 2em 0;
-    color: #ffffff;
+    padding: 3em 0;
+    margin: 1em 0;
+
 }
 
-.section-6 .fiber__title {
-    color: #ffffff;
+.surveillance__title {
+    font-size: 1.5em;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.12);
+}
+
+.surveillance__image {
+    background-color: #ddd;
+    box-shadow: 0 10px 40px #e3e3e3;
 }
 
 
 /*section-7 start
 ==============================*/
 .section-7 {
-    padding: 2em;
-    margin: 2em 0;
+    padding: 2em 0;
+    margin: 1em 0 0;
+    background: #333333 url("../images/ct_bg.png");
+    background-size: cover;position: relative;
+    color: #ffffff;
+}
+.construction {
+    /*background: #0004;*/
 }
 
-
+.construction__title {
+    font-size: 1.5em;
+    color: #ffffff;
+}
 
 /*section-bottom start
 ==============================*/
 
 .section-bottom {
-    background: #333;
+    background: #194a99 url('../images/footer_bg.png') no-repeat;
     padding: 2em;
+    position: relative;
+    background-size: cover;
 }
 
+.bottom-title {
+    color: #dddddd;
+text-transform: uppercase;
+}
 /* Fonts Form Google Font ::- https://fonts.google.com/  -:: */
 @import url('https://fonts.googleapis.com/css?family=Abel|Abril+Fatface|Alegreya|Arima+Madurai|Dancing+Script|Dosis|Merriweather|Oleo+Script|Overlock|PT+Serif|Pacifico|Playball|Playfair+Display|Share|Unica+One|Vibur');
 /* End Fonts */
@@ -198,163 +251,100 @@ body {
 
 /* Start form  attributes */
 .contact-form {
-    width: 450px;
-    min-height: 500px;
     height: auto;
     border-radius: 5px;
-    margin: 2% auto;
+    /*margin: 2% auto;*/
     box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
     padding: 2%;
     background-image: linear-gradient(-225deg, #E3FDF5 50%, #FFE6FA 50%);
 }
-/* form Container */
-.contact-form .con {
-    display: -webkit-flex;
-    display: flex;
-
-    -webkit-justify-content: space-around;
-    justify-content: space-around;
-
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-
-    margin: 0 auto;
+.inputfield{
+    height:35px
 }
 
-/* the header form form */
-header {
-    margin: 2% auto 10% auto;
-    text-align: center;
-}
-/* Login title form form */
-header h2 {
-    font-size: 250%;
-    font-family: 'Playfair Display', serif;
-    color: #3e403f;
-}
-/*  A welcome message or an explanation of the login form */
-header p {letter-spacing: 0.05em;}
-
-
-
-/* //////////////////////////////////////////// */
-/* //////////////////////////////////////////// */
-
-
-.input-item {
-    background: #fff;
-    color: #333;
-    padding: 14.5px 0px 15px 9px;
-    border-radius: 5px 0px 0px 5px;
+.con  .form-group{
+    margin-bottom: 0;
 }
 
-
-
-/* Show/hide password Font Icon */
-#eye {
-    background: #fff;
-    color: #333;
-
-    margin: 5.9px 0 0 0;
-    margin-left: -20px;
-    padding: 15px 9px 19px 0px;
-    border-radius: 0px 5px 5px 0px;
-
-    float: right;
-    position: relative;
-    right: 1%;
-    top: -.2%;
-    z-index: 5;
-
-    cursor: pointer;
+.form-label {
+    margin-bottom: 0;
 }
-/* inputs form  */
-input[class="form-input"]{
-    width: 240px;
-    height: 50px;
 
-    margin-top: 2%;
-    padding: 15px;
+.form-textarea{
+    height: 3em;
+}
+.footer-widget h3.title {
+    font-size: 20px;
+    text-transform: capitalize;
+    font-weight: 700;
+    color: #FEF9F9;
+    font-family: Raleway,serif;
+    margin: 0 0 24px;
+}
 
+.footer-widget.about-widget p {
+    color: #fff;
     font-size: 16px;
-    font-family: 'Abel', sans-serif;
-    color: #5E6472;
-
-    outline: none;
-    border: none;
-
-    border-radius: 0px 5px 5px 0px;
-    transition: 0.2s linear;
-
-}
-input[id="txt-input"] {width: 250px;}
-/* focus  */
-input:focus {
-    transform: translateX(-2px);
-    border-radius: 5px;
+    margin: 0;
 }
 
-/* //////////////////////////////////////////// */
-/* //////////////////////////////////////////// */
+.footer-widget .contact {
+    margin-top: 21px;
+}
+.footer-widget ul {
+    margin: 0;
+    padding: 0;
+}
+.footer-widget .contact li {
+    font-size: 13px;
+    color: #C9C9C9;
+    margin-bottom: 18px;
+    text-align: left;
+}
+.footer-widget ul li {
+    list-style: none;
+}
 
-/* input[type="text"] {min-width: 250px;} */
-/* buttons  */
-button {
-    display: inline-block;
-    color: #252537;
-
-    width: 280px;
-    height: 50px;
-
-    padding: 0 20px;
-    background: #fff;
-    border-radius: 5px;
-
-    outline: none;
-    border: none;
-
-    cursor: pointer;
+.footer-widget .contact li i {
+    font-size: 16px;
+    color: #FFF;
+    width: 18px;
     text-align: center;
-    transition: all 0.2s linear;
-
-    margin: 7% auto;
-    letter-spacing: 0.05em;
+    padding-right: 18px;
 }
-/* Submits */
-.submits {
-    width: 48%;
+
+.footer-widget .contact li i, .footer-widget .contact li span {
+    display: table-cell;
+    vertical-align: middle;
+    color: #fff;
+    font-size: 16px;
+}
+
+
+.social li {
+    margin-bottom: 10px;
+    color: #fff;
+    list-style-type: none;
+}
+
+.social li a {
     display: inline-block;
-    float: left;
-    margin-left: 2%;
+    width: 30px;
+    height: 30px;
+    color: #fff;
+    border: 1px solid #fff;
+    line-height: 30px;
+    text-align: center;
+    font-size: 15px;
+    border-radius: 50%;
+    margin-right: 3px;
+    transition: all .3s ease;
 }
 
-/*       Forgot Password button FAF3DD  */
-.frgt-pass {background: transparent;}
-
-/*     Sign Up button  */
-.sign-up {background: #B8F2E6;}
-
-
-/* buttons hover */
-button:hover {
-    transform: translatey(3px);
-    box-shadow: none;
+.social li a:hover {
+    background: #0077c0;
+    border-color: #0077c0;
 }
-
-/* buttons hover Animation */
-button:hover {
-    animation: ani9 0.4s ease-in-out infinite alternate;
-}
-@keyframes ani9 {
-    0% {
-        transform: translateY(3px);
-    }
-    100% {
-        transform: translateY(5px);
-    }
-}
-
-
 /*section footer start
 ================================*/
 .section-footer {
