--- a/css/custom.css
+++ b/css/custom.css
@@ -25,26 +25,45 @@
 
 .navbar-custom {
     background: #ffffff;
+    border-top: 5px solid cornflowerblue;
+    box-shadow: 0 0 6px rgba(0,0,0,0.3)
 }
 
+.navbar-light .navbar-nav .nav-link {
+    color: #2277d8;
+}
+
+a.nav-link:hover {
+    border-top: 5px solid #81d742;
+    margin: 0;
+    padding-top: 24px;
+    margin-top: -17px;
+
+}
+
+
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+    color: #226ece;
+}
 
 /*section-1 start
 =============================*/
 
 .section-1 {
-    margin-top: 4em;
-    background: rgba(6,66,173, 0.7);
-    /*position: relative;*/
-    /*background-size: cover;*/
-    color: #ffffff;
+    margin-top: 2em;
+    background: #fff;
+    color: #000;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.12);
     padding: 6em;
+    font-family: 'Roboto', sans-serif;
 }
 
 
 
 .display-5 {
-    color: #ffffff;
-
+    color: #000000;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.12);
+text-transform: uppercase;
 }
 
 
@@ -52,8 +71,9 @@
 ===========================*/
 
 .section-2 {
-    padding: 5em 0;
+    padding: 3em 0;
     /*background:#800080;*/
+    background: rgba(6,66,173, 0.7);
 
 }
 
@@ -65,7 +85,7 @@
 
 
 .fiber__title {
-    color: #423030;
+    color: #ffffff;
     font-size: 1.5em;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.12);
 }
@@ -99,12 +119,21 @@
     background: #333333;
     color: #a4a4a4;
     padding: 3em 0;
-    margin: 1em 0;
+    /*margin: 1em 0;*/
 }
 
 .optical__title {
     color: #ffffff;
     font-size: 1.5em;
+}
+.optical__image {
+    width:540px;
+    height: 259px;
+}
+
+.optical__image img {
+    width: 100%;
+    height: 100%;
 }
 
 .more {
@@ -122,25 +151,21 @@
     /*background: #90e290;*/
     /*position: relative;*/
 }
-/*.section-4::before {*/
-    /*content: '';*/
-    /*position: absolute;*/
-    /*top: 0; right: 0;*/
-    /*border-top: 60px solid #f9fafa;*/
-    /*border-left: 60px solid #90e290;*/
-    /*width: 0;*/
-/*}*/
+.fiber_accs__title {
+    color: #000000;
+    font-size: 1.5em;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.12);
+}
 
-/*.section-4::after {*/
-    /*content: '';*/
-    /*position: absolute;*/
-    /*bottom: 0; left: 0;*/
-    /*border-bottom: 60px solid #ffffff;*/
-    /*border-right: 60px solid #90e290;*/
-    /*width: 0;*/
-/*}*/
+.fiber_accs__image {
+    width:540px;
+    height: 259px;
+}
 
-
+.fiber_accs__image img {
+    width: 100%;
+    height: 100%;
+}
 
 
 /*section-5 start
@@ -156,11 +181,15 @@
     font-size: 1.5em;
 }
 
-/*.section-5:hover {*/
-    /*background: #fff;*/
-    /*color: #333;*/
-    /*box-shadow: 0 16px 30px #e9e9e9;*/
-/*}*/
+.hardware__image {
+    width:540px;
+    height: 259px;
+}
+
+.hardware__image img {
+    width: 100%;
+    height: 100%;
+}
 
 
 /*section-6 start
@@ -173,14 +202,21 @@
 
 .surveillance__title {
     font-size: 1.5em;
+    color: #000000;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.12);
 }
 
 .surveillance__image {
     background-color: #ddd;
     box-shadow: 0 10px 40px #e3e3e3;
+    width: 540px;
+    height: 259px;
 }
 
+.surveillance__image img {
+    width: 100%;
+    height: 100%;
+}
 
 /*section-7 start
 ==============================*/
@@ -200,6 +236,15 @@
     color: #ffffff;
 }
 
+.construction__image {
+    width:540px;
+    height: 259px;
+}
+
+.construction__image img {
+    width: 100%;
+    height: 100%;
+}
 /*section-bottom start
 ==============================*/
 
